# proton-sdk-rs

./: .gitignore  Cargo.toml  README.md  SECURITY.md  UPSTREAM_SYNC.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
crates/proton-drive-rs/: Cargo.toml
crates/proton-drive-rs/examples/: live_login.rs
crates/proton-drive-rs/src/: client.rs  dtos.rs  lib.rs  node.rs  photos.rs
crates/proton-drive-rs/tests/: live_drive_ops.rs  live_events.rs  live_transfer_ops.rs  live_upload_download.rs
crates/proton-drive-rs/tests/common/: mod.rs
crates/proton-drive-sdk/: Cargo.toml  LICENSE
crates/proton-drive-sdk/examples/: live_login.rs
crates/proton-drive-sdk/src/: cache.rs  client.rs  crypto.rs  dtos.rs  events.rs  lib.rs  node.rs  photos.rs
crates/proton-drive-sdk/tests/: live_drive_ops.rs  live_events.rs  live_transfer_ops.rs  live_upload_download.rs
crates/proton-drive-sdk/tests/common/: mod.rs
crates/proton-sdk/: Cargo.toml
crates/proton-sdk/src/: account.rs  api.rs  cache.rs  config.rs  crypto.rs  error.rs  http.rs  ids.rs  lib.rs  session.rs  telemetry.rs
crates/proton-sdk/src/account/: dtos.rs
crates/proton-sdk/src/crypto/: content.rs  derive.rs  encrypt.rs  errors.rs  keys.rs  messages.rs  srp.rs  verify.rs
scripts/: upstream-sync.sh
