[workspace]
resolver = "2"
members = ["crates/proton-sdk", "crates/proton-drive-sdk"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ProtonDriveApps/sdk"
rust-version = "1.80"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
bytes = "1"
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
bcrypt = "0.17"
pgp = "0.16"
tracing = "0.1"
num-bigint = "0.4"
num-traits = "0.2"
getrandom = "0.2"
# rPGP re-exports rand_core 0.6 traits; match its 0.8 line for keygen/encryption RNG.
rand = "0.8"
