[package]
name = "proton-drive-sdk"
description = "High-level Proton Drive client for Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
proton-sdk = { path = "../proton-sdk" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
bytes.workspace = true
base64.workspace = true
hex.workspace = true
hmac.workspace = true
sha1.workspace = true
sha2.workspace = true
pgp.workspace = true
tracing.workspace = true
