[package]
name = "proton-sdk"
description = "Core Proton account/session/crypto primitives for the Rust Proton SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/proton-sdk"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
bytes.workspace = true
base64.workspace = true
hex.workspace = true
hmac.workspace = true
sha2.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
bcrypt.workspace = true
pgp.workspace = true
chrono.workspace = true
tracing.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
getrandom.workspace = true
rand.workspace = true

[dev-dependencies]
# A one-shot loopback HTTP server backs the telemetry-instrumentation test;
# the `net` feature isn't needed by the library itself.
tokio = { workspace = true, features = ["net"] }
